--- a/css/index.css
+++ b/css/index.css
@@ -277,10 +277,48 @@ img {border:none;}
 	    /*animation:fj 2s ease-out infinite alternate;*/
 	}
 	.screen-center{
-		width: 1000px;
+		
+
 		margin:236px auto 0px;
 
 		position: relative;
+	}
+	.login{
+		background: #4ebffc;
+		width: 340px;
+		height: 300px;
+		border-radius: 5px;
+		position: absolute;
+		
+
+	}
+	
+	.account,.token{
+		width: 299px;
+		height: 40px;
+		background: #fff;
+		overflow: hidden;
+		margin: 20px auto;
+	}
+	.account span{
+		
+    width: 20px;
+    height: 20px;
+    margin: 12px 3px 0 10px;
+    float: left;
+    display: block;
+    /*background-position:-124px -12px;*/
+	background: url(../img/icons.png) no-repeat;
+
+	}
+	.account input{
+	border: 0;
+    outline: none;
+    padding: 9px;
+    
+    float: left;
+
+   
 	}
 	.zbcj{
 	width: 501px;
@@ -310,6 +348,112 @@ img {border:none;}
 			transform:translateY(1px);
 		}
 	}
+	.token{
+		background:rgba(255,255,255,0);
+	}
+	.token input{
+       width: 140px;   
+       outline: none;
+       padding: 9px;
+       height: 40px;
+       background: #fff;
+       float: left;
+	}
+	.token img{
+		opacity: 0.6;
+		width: 99px;
+		height: 39px;
+		float: left;
+		margin-left:10px;
+	}
+	.token a{
+		display: inline-block;
+		color: #fff;
+		font-size: 12px;
+		line-height: 40px;
+	}
+	.tijiao{
+		
+		height: 35px;
+		border: 0;
+	    background: #ffd850;
+	    color: #5c4c12;
+	    border-radius: 2px;
+	    width: 299px;
+	    
+	    
+	    display: block;
+	    padding: 0 10px;
+	    font-size: 18px;
+	    line-height: 35px;
+	   
+	    text-align: center;
+	    vertical-align: middle;
+	    margin:30px auto 10px;
+	    box-shadow: 0px 2px 3px rgba(0,0,0,.2);
+	}
+	.other{
+		width: 299px;
+		margin: 12px 0 8px;
+    	font-size: 12px;
+    	color: #9dbcdb;
+    	height: 19px;
+    	
+    	margin: 0 auto;
+	}
+	.other span{
+		display: inline-block;
+    width: 15px;
+    height: 17px;
+    background: url(../img/icons.png) no-repeat -203px -75px;
+    margin: 2px 4px 0 0;
+    float: left;
+	}
+	.other>a{
+       color: #fff;
+       font-size: 12px;
+       line-height: 19px;
+       float: left;
+	}
+	.other a:hover{
+		text-decoration: underline;
+	}
+	.other :last-child{
+		float: right;
+	}
+/*第一屏响应式开始*/
+/*大屏*/
+@media screen and (min-width: 767px){
+  .screen-center{
+  	max-width: 1000px;
+  }
+  .zbcj{
+  	display: block;
+  }
+  .login{
+  	  right:0%;
+		top:5%;
+  }
+  
+  
+}
+/*小屏*/
+@media screen and (max-width:767px){ 
+  .zbcj{
+  	display: none;
+  }
+  .login{
+  	position: absolute;
+  	left:50%;
+  	top:-20%;
+  	margin-left:-170px;
+  }
+  .obj-light{
+  	top:-48px;
+	left:5%;
+  }
+}
+/*第一屏响应式结束*/
 /*第一屏结束*/
 	.screen2{
 		width:100%;	
