--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ img {border:none;}
 	z-index: 2;
 }
 .nav{
-	max-width:1000px;
+	
 	height: 60px;
 	margin:0 auto;
 	/*background: pink;*/
@@ -47,7 +47,7 @@ img {border:none;}
     overflow: hidden;
     text-align: justify;
     position: relative;
-    padding:0px 15px;
+    
 }
  .min-nav .min-nav-list:after {
     content: "";
@@ -105,6 +105,7 @@ img {border:none;}
 	display: inline-block;
 	float: right;
 	margin-top:10px;
+
 	
 }
 .nav-right li{
@@ -131,7 +132,9 @@ img {border:none;}
 /*导航响应式*/
 /*大屏*/
 @media screen and (min-width:767px) {
-
+    .nav{
+    	width: 58%;
+    }
 	.min-nav{
 		display:none;
 	}
@@ -155,7 +158,8 @@ img {border:none;}
 @media screen and (max-width:767px){
 
 	.min-nav {
-    max-width: 767px;
+    width:100%;
+    padding:0px 10px;
     height: 60px;
     
     display: block!important;
@@ -254,7 +258,7 @@ img {border:none;}
     background:url(../img/cloud_3_5ee0340.png) no-repeat
 }
 @keyframes moveCloud{
-		100%{transform:translateX(-25%)};
+		100%{transform:translateX(-25%)}
 	}
 	.screen-footer{
 		width: 100%;
@@ -264,17 +268,25 @@ img {border:none;}
 		bottom:0;
 		left:0;
 	}
+	.screen-footer-inner{
+		width: 1000px;
+		height: 100%;
+		margin:0 auto;	
+		position: relative;
 
-	.screen-footer a{
+	}
+
+	.screen-footer-inner a{
 	    display: block;
 	    width: 30px;
 	    height: 26px;
 	    background: url(../img/arrow_aad9b25.png);
 	    position: absolute;
-	    left: 50%;
-	    bottom:45px;
+	    left: 58%;
 	    margin-left:-15px;
-	    /*animation:fj 2s ease-out infinite alternate;*/
+	    bottom:45px;
+
+	    animation:jt .5s ease-out infinite alternate;
 	}
 	.screen-center{
 		
@@ -342,9 +354,12 @@ img {border:none;}
 		}
 	}
 	@keyframes jt{
-		
+		0%{
+			opacity: .2;
+		}
 		100%{
-			transform:translateY(1px);
+			transform:translateY(7px);
+			opacity: 1;
 		}
 	}
 	.token{
@@ -420,12 +435,15 @@ img {border:none;}
 	.other :last-child{
 		float: right;
 	}
+	
 /*第一屏响应式开始*/
 /*大屏*/
 @media screen and (min-width: 767px){
   .screen-center{
-  	max-width: 1000px;
+  	width:58%;
+
   }
+  
   .zbcj{
   	display: block;
   }
@@ -434,6 +452,41 @@ img {border:none;}
 		top:5%;
   }
   
+  .zuan-1{
+	width: 265px;
+    height: 175px;
+    background: url(../img/hill_1_0d79217.png);
+    left: -182px;
+    bottom: 1%;
+    position: absolute;
+	}
+	.ship{
+	width: 242px;
+    height: 228px;
+    background: url(../img/ship_1ad6734.png);
+    left: 136px;
+    bottom: 63%;
+    position: absolute;
+		
+	}
+  .zuan-2{
+	width: 63px;
+    height: 78px;
+    background: url(../img/hill_2_540422f.png);
+     right: 288px;
+    top: -13px;
+   
+  
+    position: absolute;
+	}
+	.zuan-3{
+	    width: 260px;
+    height: 175px;
+    background: url(../img/hill_3_ace39fb.png);
+    right: -129px;
+    top: -47px;
+    position: absolute;
+	}
   
 }
 /*小屏*/
@@ -442,7 +495,7 @@ img {border:none;}
   	display: none;
   }
   .screen-center{
-  	margin-top: 30%;
+  	margin-top: 35%;
   }
   .login{
   	position: absolute;
@@ -454,23 +507,334 @@ img {border:none;}
   	top:-48px;
 	left:5%;
   }
+  .screen-footer-inner{
+		width:58%;		
+	}
+ .screen-footer-inner a{
+ 	left: 50%;
+ 	margin-left: -15px;
+ }
+
 }
 /*第一屏响应式结束*/
 /*第一屏结束*/
+/*第二屏开始*/
 	.screen2{
 		width:100%;	
 		height: 100%;
 		background: url(../img/bg2.jpg);
-		position: relative;
+		
 		
 	}
-	.screen3{
+	
+.screen2-center{
+	width: 58%;
+	height: 100%;
+	margin:0 auto;
+	position: relative;
+	text-align: center;
+}
+.linxian-box{
+	position: absolute;
+	width: 66px;
+	height: 126px;
+	left:0;
+    top:44%;
+    
+}
+.linxian{
+		width: 66px;
+	    height: 126px;
+	    text-indent: -9999em;
+	    float: left;
+	    background: url(../img/h_lingxian_221f2d8.png) no-repeat;
+        position: absolute;
+        left:0;
+        top:49%;
+        animation:xuanzhuan 1s linear infinite alternate;
+        
+	}
+
+	@keyframes xuanzhuan{
+		0%{
+			transform:rotateY(0deg);
+		}
+		100%{
+			transform:rotateY(-360deg);
+			transform-origin:center center;
+		}
+	}
+.screen2-footer{
+	width: 100%;
+	height: 88px;
+	position: absolute;
+	bottom:0 ;
+	left: 0;
+	
+}
+
+.screen2-footer-inner a{
+	   display:block;
+	   width: 30px;
+	   height: 26px;
+	    background: url(../img/arrow_aad9b25.png);
+	    position: absolute;
+	    left: 50%;
+	    margin-left:-15px;
+	    bottom:28px;
+	   
+}
+.cfx1{
+	width: 44px;
+	height: 44px;
+	position: absolute;
+	left:2%;
+	bottom:0;
+	 background: #35b568;
+   
+}
+.cfx2{
+	width: 88px;
+	height: 88px;
+	position: absolute;
+	left:10%;
+	bottom:0;
+	background: #4ac179;
+    
+}
+.cfx3{
+	width: 44px;
+	height: 44px;
+	position: absolute;
+	left:17.3%;
+	bottom:0;
+	background: #8ae75a;    
+}
+.cfx4{
+	left:70%;
+}
+.cfx5{
+	left:78%;
+}
+.obj-brain{
+		position: absolute;
+		right:0%;
+		top:30%;
+		width: 444px;
+	    height: 427px;
+	    background: url(../img/brain_36a156f.png);
+	    
+	   
+	}
+/*大屏*/
+@media screen and (min-width: 767px){
+   .screen2-text{
+		position:absolute;
+		left: 8%;
+		top:49%;
+		width:36%;
+		text-align: left;
+}
+.obj-brain-1{
+		 background: url(../img/allside_e8abd12.png) no-repeat;
+	}
+.quanmian{
+		 background: url(../img/h_quanmian_8f813d2.png) no-repeat;
+	}
+	.zhuanye{
+		 background: url(../img/h_zhuanye_256a94d.png) no-repeat;
+	}
+.screen2-footer-inner{
+	width: 58%;
+	margin:0 auto;
+	height: 100%;
+	
+	position: relative;
+	
+	
+}
+.screen2-text h3{
+    font-size: 34px;
+    font-weight: 400;
+    letter-spacing: 2px;
+    line-height: 48px;
+    margin-bottom: 6px;
+    color:#fff;
+}
+.screen2-text span{
+	font-size: 19px;
+    letter-spacing: 1px;
+    line-height: 32px;
+    opacity: .8;
+    color: #fff;
+}
+	.obj-brain{
+		position: absolute;
+		right:-14%;
+		top:30%;
+		width: 444px;
+	    height: 427px;
+	    background: url(../img/brain_36a156f.png);
+	    
+	   
+	}
+}
+/*第二屏动画*/
+.swiper-slide-active .obj-brain{
+	animation:screen2Move 2s forwards;
+}
+.swiper-slide-active .screen2-text{
+	animation:screen2Move-1 2s forwards;
+}
+.swiper-slide-active .linxian-box{
+	animation:screen2Move-2 2s forwards;
+}
+.swiper-slide-active .jit{
+	animation:jt 1s infinite;
+}
+.swiper-slide-active .ship{
+	animation:screen2Move-1 1s forwards;
+}
+
+/*小屏*/
+@media screen and (max-width: 767px){
+	.linxian{
+		width: 33px;
+	    height: 63px;
+
+		background-size:90%;
+		left: -15%;
+	}
+	.obj-brain-2{
+		display: none;
+	}
+.obj-brain-1{
+		 background: url(../img/allside_e8abd12.png) no-repeat;
+	}
+.quanmian{
+		 background: url(../img/h_quanmian_8f813d2.png) no-repeat;
+	}
+	
+
+	.quanmian{
+		width: 33px;
+	    height: 63px;
+
+		background-size:90%;
+		left: -15%;
+	}
+	.zhuanye{
+		width: 33px;
+	    height: 63px;
+
+		background-size:90%;
+		left: -15%;
+	}
+
+
+	
+      .screen2-text{
+       display: none;
+    }
+   .screen2-footer-inner div{
+	
+	 display: none;
+	
+}
+
+	.obj-brain,.screen-x .obj-brain-1,.obj-brain-2{
+		position: absolute;
+		right:-25%;
+		top:40%;
+		width: 222px;
+	    height: 241px;
+	   background-repeat: no-repeat;
+	    background-size:80%;
+
+	   
+	}
+
+} 
+@keyframes screen2Move{
+	100%{
+		transform:translateX(-15%);
+	}
+}
+@keyframes screen2Move-1{
+	100%{
+		transform:translateX(15%);
+	}
+}
+@keyframes screen2Move-2{
+	100%{
+		transform:translateX(30px);
+	}
+}
+
+
+
+/*第二屏结束*/
+/*第三屏开始*/
+.screen3{
 		width:100%;	
 		height: 100%;
 		background: url(../img/bg-2_867b7b4.jpg);
-		position: relative;
+		
 	
 	}
+.screen3-inner{
+   width: 58%;
+   height: 100%;
+   margin:0 auto;
+   position: relative;
+}
+.screen3-top{
+	width: 100%;
+	position: absolute;
+}
+.screen3-top div{
+	width: 88px;
+	 position: absolute;
+    height: 88px;
+}
+.screen3-1{
+	background: #33bb9a;
+    left: 70px;
+    top: 60px;   
+}
+.screen3-2{
+	    background: #29a2b8;
+    left: -18px;
+    top: 148px;  
+}
+.screen3-3{
+	    background: #60cf6e;
+    left: 158px;
+    top: 148px  
+}
+.screen3-top .screen3-4{
+	background: #8ae75a;
+    left: 70px;
+    top: 236px;
+    width: 176px;
+    height: 176px;
+    background-image: url(../img/square_c776382.jpg)
+}
+.screen3-5{
+	background: #33bb9a;
+    left: 246px;
+    top: 236px;
+}
+
+	
+	.screen3-footer{
+		width: 100%;
+	 height: 138px;
+    background: transparent url(../img/bg-3-head_b8a3f7f.png);
+}
+
+/*第三屏结束*/
+/*第四屏开始*/
 	.screen4{
 		width:100%;	
 		height: 100%;
@@ -478,3 +842,24 @@ img {border:none;}
 		position: relative;
 		
 	}
+
+	.obj-brain-2{
+		 background: url(../img/stat_8934528.png) no-repeat;
+	}
+	.bd{
+		font-size: 12px;
+		color: #fff;
+	}
+	.bd:hover{
+		text-decoration: underline;
+	}
+	.qq{
+	left: -36px;
+    top: -56px;
+    width: 275px;
+    height: 245px;
+    background: url(../img/bubble_3b0f897.png);
+    position: absolute;
+	}
+
+/*第四屏结束*/
